[package]
name = "gitup"
version = "0.2.1"
authors = ["Lucian <neuraluc@gmail.com>"]
edition = "2021"

description = "A robust, cross-platform CLI tool to check, install, and manage Git configurations and user profiles."

license = "MIT"

readme = "readme.md"

homepage = "https://github.com/gni/gitup"
repository = "https://github.com/gni/gitup"

categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "cli", "setup", "config", "profile"]
rust-version = "1.87.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
clap_complete = "4.5.54"
colored = "3.0.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
dirs = "6.0.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"